--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="Client_App.Form_12"
+    x:Class="Client_App.Views.Forms.Forms1.Form_12"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
