--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -52,9 +52,11 @@
 			<Setter Property="TextWrapping" Value="Wrap"/>
 			<Setter Property="TextAlignment" Value="Center"/>
 		    <Setter Property="TextTrimming" Value="None"/>
-        
         </Style>
-	
+        <Style Selector="DataGridCell:focus-within">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+        </Style>
 	</Window.Styles>
 
     <Design.DataContext>
